Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/Promotion_Member__c.object-meta.xml
<CustomObject>
    <label>Promotion Member</label>
    <nameField>
        <displayFormat>PM-{YY}-{MM}-{DD}-{00}</displayFormat>
        <label>Promotion Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>