Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Taken</label>
    <type>Checkbox</type>
</CustomField>