Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Brief_about_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Brief_about_Complaint__c</fullName>
    <label>Brief about Complaint</label>
    <type>TextArea</type>
</CustomField>