Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Call_Center_person_name__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_person_name__c</fullName>
    <formula>TEXT(Promotions2__r.Call_Center_Person_Name__c)</formula>
    <label>Call Center person name</label>
    <type>Text</type>
</CustomField>