Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/call_completed_date__c.field-meta.xml
<CustomField>
    <fullName>call_completed_date__c</fullName>
    <formula>Promotions2__r.Call_Completed_Date__c</formula>
    <label>call completed date</label>
    <type>Date</type>
</CustomField>