Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>Wrong/Invalid Number</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Person not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>