Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Complaint_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Remarks__c</fullName>
    <label>Complaint Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>