Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <formula>IF( ISBLANK(Contacts__c), Account__r.Contact_Number_Mobile__c, Contacts__r.Mobile__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>