Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Distributor_Dealer__c.Type__c</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Distributor_Dealer__c</referenceTo>
    <relationshipLabel>Promotion Members</relationshipLabel>
    <relationshipName>Promotion_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>