Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Used in related list Accounts</description>
    <formula>Text(Promotions2__r.District__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>