Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/District_Account__c.field-meta.xml
<CustomField>
    <fullName>District_Account__c</fullName>
    <formula>TEXT( Account__r.District__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District(Account)</label>
    <type>Text</type>
</CustomField>