Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/How_did_you_like_Ashirvad_till_now__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_like_Ashirvad_till_now__c</fullName>
    <inlineHelpText>How did you like Ashirvad till now? What changes do you expect from Ashirvad?</inlineHelpText>
    <label>What changes do you expect from Ashirvad</label>
    <type>TextArea</type>
</CustomField>