Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/How_was_the_Promotion__c.field-meta.xml
<CustomField>
    <fullName>How_was_the_Promotion__c</fullName>
    <label>How was the Promotion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>