Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Manager_Id__c</fullName>
    <formula>CreatedBy.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Id</label>
    <type>Text</type>
</CustomField>