Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Party_type__c.field-meta.xml
<CustomField>
    <fullName>Party_type__c</fullName>
    <formula>TEXT(Account__r.Party_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party type</label>
    <type>Text</type>
</CustomField>