Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Please_give_suggestion_for_improvement__c.field-meta.xml
<CustomField>
    <fullName>Please_give_suggestion_for_improvement__c</fullName>
    <inlineHelpText>Please give us at least one suggestion for improvement.</inlineHelpText>
    <label>Please give  suggestion for improvement</label>
    <type>TextArea</type>
</CustomField>