Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Promotion_Member_Created_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Member_Created_Date_time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Member Created Date time</label>
    <type>DateTime</type>
</CustomField>