Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Promotions2__c.field-meta.xml
<CustomField>
    <fullName>Promotions2__c</fullName>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipName>Promotion_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>