Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Service_Support__c.field-meta.xml
<CustomField>
    <fullName>Service_Support__c</fullName>
    <inlineHelpText>Rate between 1-3, with 3 will be highest.</inlineHelpText>
    <label>Overall Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>