Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/State_Account__c.field-meta.xml
<CustomField>
    <fullName>State_Account__c</fullName>
    <formula>TEXt(Account__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State(Account)</label>
    <type>Text</type>
</CustomField>