Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Suggestion__c</fullName>
    <label>Suggestion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Product</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Promotional Activity</fullName>
            </value>
            <value>
                <fullName>Gift Request</fullName>
            </value>
            <value>
                <fullName>Solvent Cement</fullName>
            </value>
            <value>
                <fullName>Direct Dealership</fullName>
            </value>
            <value>
                <fullName>Distributorship</fullName>
            </value>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>