Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Taluk_Account__c.field-meta.xml
<CustomField>
    <fullName>Taluk_Account__c</fullName>
    <formula>Account__r.APPL_Taluk__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taluk(Account)</label>
    <type>Text</type>
</CustomField>