Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>