Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <description>Used in related list Account</description>
    <formula>Text(Promotions2__r.Type__c)</formula>
    <label>Type of Activity</label>
    <type>Text</type>
</CustomField>