Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Type_of_Promotion_Member__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Promotion_Member__c</fullName>
    <label>Type of Promotion Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributors/Dealers</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>