Partial_14Dec2021/force-app/main/default/objects/Promotion_Member__c/fields/Would_you_Consider_Purchasing_from_us__c.field-meta.xml
<CustomField>
    <fullName>Would_you_Consider_Purchasing_from_us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would you Consider Purchasing from us</label>
    <type>Checkbox</type>
</CustomField>